fixed more layout problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ body {
     padding-left: 37.5%;
     text-align: left;
     width: 25%;
-    margin-top: -54px;
+    margin-top: -47px;
 }
 
 .progress-center-bottom-h4 {
@@ -189,7 +189,7 @@ body {
 .progress-left-bottom {
     text-align: left;
     width: 25%;
-    margin-top: -54px;
+    margin-top: -47px;
 }
 
 .progress-left-bottom-h4 {
